force-app/main/default/objects/DetailByInquiryFactory__c/DetailByInquiryFactory__c.object-meta.xml
<CustomObject>
    <label>伺い場所別数値明細</label>
    <nameField>
        <displayFormat>QD-{00000}</displayFormat>
        <label>場所別数値</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>