force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustCPMax__c.field-meta.xml
<CustomField>
    <fullName>AdjustCPMax__c</fullName>
    <label>今回増減_CP(MAX)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>