force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustCPMin__c.field-meta.xml
<CustomField>
    <fullName>AdjustCPMin__c</fullName>
    <label>今回増減_CP(MIN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>