force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustTC__c.field-meta.xml
<CustomField>
    <fullName>AdjustTC__c</fullName>
    <formula>AdjustWC__c + (  AdjustWC__c * (VALUE(TEXT( intCommonRatio__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回増減TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>