force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustTCRateMax__c.field-meta.xml
<CustomField>
    <fullName>AdjustTCRateMax__c</fullName>
    <formula>ROUND( AdjustTC__c /AdjustCPMax__c,3)</formula>
    <label>今回増減_TC率(MAX)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>