force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustTCRateMin__c.field-meta.xml
<CustomField>
    <fullName>AdjustTCRateMin__c</fullName>
    <formula>ROUND( AdjustTC__c /AdjustCPMin__c,3)</formula>
    <label>今回増減_TC率(MIN)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>