force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustTotalCPMax__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalCPMax__c</fullName>
    <formula>NewContractCP__c + AdjustCPMax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回合計CP(MAX)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>