force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustTotalCPMin__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalCPMin__c</fullName>
    <formula>NewContractCP__c + AdjustCPMin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回合計CP(MIN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>