force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustTotalTC__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalTC__c</fullName>
    <formula>AdjustTotalWC__c + (  AdjustTotalWC__c * (VALUE(TEXT( intCommonRatio__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回合計TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>