force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustTotalTCRateMax__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalTCRateMax__c</fullName>
    <formula>ROUND( AdjustTotalTC__c / AdjustTotalCPMax__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回合計TC率(MAX)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>