force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustTotalTCRateMin__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalTCRateMin__c</fullName>
    <formula>ROUND( AdjustTotalTC__c / AdjustTotalCPMin__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回合計TC率(MIN)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>