force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustTotalWC__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalWC__c</fullName>
    <formula>NewContractWC__c +  AdjustWC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回合計WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>