force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustTotalWCRateMax__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalWCRateMax__c</fullName>
    <formula>ROUND( AdjustTotalWC__c / AdjustTotalCPMax__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回合計WC率(MAX)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>