force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustTotalWCRateMin__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalWCRateMin__c</fullName>
    <formula>ROUND( AdjustTotalWC__c / AdjustTotalCPMin__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今回合計WC率(MIN)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>