force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustWC__c.field-meta.xml
<CustomField>
    <fullName>AdjustWC__c</fullName>
    <label>今回増減_WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>