force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustWCRateMax__c.field-meta.xml
<CustomField>
    <fullName>AdjustWCRateMax__c</fullName>
    <formula>ROUND(AdjustWC__c /AdjustCPMax__c,3)</formula>
    <label>今回増減_WC率(MAX)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>