force-app/main/default/objects/DetailByInquiryFactory__c/fields/AdjustWCRateMin__c.field-meta.xml
<CustomField>
    <fullName>AdjustWCRateMin__c</fullName>
    <formula>ROUND(AdjustWC__c /AdjustCPMin__c,3)</formula>
    <label>今回増減_WC率(MIN)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>