force-app/main/default/objects/DetailByInquiryFactory__c/fields/CommonRatio__c.field-meta.xml
<CustomField>
    <fullName>CommonRatio__c</fullName>
    <label>共通費率</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BU__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>33% ： 製作所</fullName>
            </value>
            <value>
                <fullName>17% ： 製作所移牒他社品調達（機種コード：XO）</fullName>
            </value>
            <value>
                <fullName>19% ： 神電移牒TMEIC製品（機種コード：YO）</fullName>
            </value>
            <value>
                <fullName>21% ： プラ統</fullName>
            </value>
            <value>
                <fullName>29% ： 通プラ（機種コード：97）</fullName>
            </value>
            <value>
                <fullName>20% ： 他社品</fullName>
            </value>
            <value>
                <fullName>23% ： 製作所</fullName>
            </value>
            <value>
                <fullName>9% ： 製作所移牒他社品調達（機種コード：XO）</fullName>
            </value>
            <value>
                <fullName>11% ： 神電移牒TMEIC製品（機種コード：YO）</fullName>
            </value>
            <value>
                <fullName>15% ： プラ統</fullName>
            </value>
            <value>
                <fullName>19% ： 通プラ（機種コード：97）</fullName>
            </value>
            <value>
                <fullName>12% ： 他社品</fullName>
            </value>
            <value>
                <fullName>31% ： 製作所</fullName>
            </value>
            <value>
                <fullName>15% ： 製作所移牒他社品調達（機種コード：XO）</fullName>
            </value>
            <value>
                <fullName>17% ： 神電移牒TMEIC製品（機種コード：YO）</fullName>
            </value>
            <value>
                <fullName>20% ： プラ統</fullName>
            </value>
            <value>
                <fullName>27% ： 通プラ（機種コード：97）</fullName>
            </value>
            <value>
                <fullName>18% ： 他社品</fullName>
            </value>
            <value>
                <fullName>25% ： 製作所</fullName>
            </value>
            <value>
                <fullName>14% ： 製作所移牒他社品調達（機種コード：XO）</fullName>
            </value>
            <value>
                <fullName>16% ： 神電移牒TMEIC製品（機種コード：YO）</fullName>
            </value>
            <value>
                <fullName>19% ： プラ統</fullName>
            </value>
            <value>
                <fullName>23% ： 通プラ（機種コード：97）</fullName>
            </value>
            <value>
                <fullName>16% ： 旧通キ一、二　旧C電</fullName>
            </value>
            <value>
                <fullName>25% ： 旧通キ一、二　旧C電以外</fullName>
            </value>
            <value>
                <fullName>24% ： 旧通キ三、四　旧C電</fullName>
            </value>
            <value>
                <fullName>28% ： 旧通キ三、四　旧C電以外</fullName>
            </value>
            <value>
                <fullName>33% ： 海底ケーブル</fullName>
            </value>
            <value>
                <fullName>17% ： 他社品</fullName>
            </value>
            <value>
                <fullName>10% ： 製作所移牒他社品調達（機種コード：XO）</fullName>
                <isActive>false</isActive>
                <label>10% ： 製作所移牒他社品調達（機種コード：XO）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>