force-app/main/default/objects/DetailByInquiryFactory__c/fields/CP__c.field-meta.xml
<CustomField>
    <fullName>CP__c</fullName>
    <label>価格案CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>