force-app/main/default/objects/DetailByInquiryFactory__c/fields/CPMin__c.field-meta.xml
<CustomField>
    <fullName>CPMin__c</fullName>
    <label>価格案(MIN)_CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>