force-app/main/default/objects/DetailByInquiryFactory__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <label>製作所</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Factory</valueSetName>
    </valueSet>
</CustomField>