force-app/main/default/objects/DetailByInquiryFactory__c/fields/GrossProfit__c.field-meta.xml
<CustomField>
    <fullName>GrossProfit__c</fullName>
    <formula>CP__c -  WC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>価格案粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>