force-app/main/default/objects/DetailByInquiryFactory__c/fields/GrossProfitMin__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitMin__c</fullName>
    <formula>CPMin__c -  WC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>価格案(MIN)_粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>