force-app/main/default/objects/DetailByInquiryFactory__c/fields/ImprovementTargetCP__c.field-meta.xml
<CustomField>
    <fullName>ImprovementTargetCP__c</fullName>
    <label>改善目標CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>