force-app/main/default/objects/DetailByInquiryFactory__c/fields/ImprovementTargetGrossProfit__c.field-meta.xml
<CustomField>
    <fullName>ImprovementTargetGrossProfit__c</fullName>
    <formula>ImprovementTargetCP__c -  ImprovementTargetWC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>改善目標粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>