force-app/main/default/objects/DetailByInquiryFactory__c/fields/ImprovementTargetNetProfit__c.field-meta.xml
<CustomField>
    <fullName>ImprovementTargetNetProfit__c</fullName>
    <formula>ImprovementTargetCP__c - ImprovementTargetTC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>改善目標純利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>