force-app/main/default/objects/DetailByInquiryFactory__c/fields/ImprovementTargetTC__c.field-meta.xml
<CustomField>
    <fullName>ImprovementTargetTC__c</fullName>
    <formula>ImprovementTargetWC__c + ( ImprovementTargetWC__c * (VALUE(TEXT( intCommonRatio__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>改善目標TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>