force-app/main/default/objects/DetailByInquiryFactory__c/fields/ImprovementTargetTCRate__c.field-meta.xml
<CustomField>
    <fullName>ImprovementTargetTCRate__c</fullName>
    <formula>ROUND(ImprovementTargetTC__c / ImprovementTargetCP__c ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>改善目標TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>