force-app/main/default/objects/DetailByInquiryFactory__c/fields/ImprovementTargetWC__c.field-meta.xml
<CustomField>
    <fullName>ImprovementTargetWC__c</fullName>
    <label>改善目標WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>