force-app/main/default/objects/DetailByInquiryFactory__c/fields/ImprovementTargetWCRate__c.field-meta.xml
<CustomField>
    <fullName>ImprovementTargetWCRate__c</fullName>
    <formula>ROUND(ImprovementTargetWC__c /  ImprovementTargetCP__c ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>改善目標WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>