force-app/main/default/objects/DetailByInquiryFactory__c/fields/intCommonRatio__c.field-meta.xml
<CustomField>
    <fullName>intCommonRatio__c</fullName>
    <formula>VALUE(LEFT(TEXT(CommonRatio__c), FIND(&quot;%&quot;, TEXT(CommonRatio__c)) -1 )) * 0.01</formula>
    <label>共通費率（内部用）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>