force-app/main/default/objects/DetailByInquiryFactory__c/fields/isFromOpportunity__c.field-meta.xml
<CustomField>
    <fullName>isFromOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>案件から転記フラグ</label>
    <type>Checkbox</type>
</CustomField>