force-app/main/default/objects/DetailByInquiryFactory__c/fields/NetProfit__c.field-meta.xml
<CustomField>
    <fullName>NetProfit__c</fullName>
    <formula>CP__c -  TC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>価格案純利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>