force-app/main/default/objects/DetailByInquiryFactory__c/fields/NetProfitMin__c.field-meta.xml
<CustomField>
    <fullName>NetProfitMin__c</fullName>
    <formula>CPMin__c -  TCMin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>価格案(MIN)_純利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>