force-app/main/default/objects/DetailByInquiryFactory__c/fields/NewContractCP__c.field-meta.xml
<CustomField>
    <fullName>NewContractCP__c</fullName>
    <label>最新_CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>