force-app/main/default/objects/DetailByInquiryFactory__c/fields/NewContractGrossProfit__c.field-meta.xml
<CustomField>
    <fullName>NewContractGrossProfit__c</fullName>
    <formula>NewContractCP__c - NewContractWC__c</formula>
    <label>最新_粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>