force-app/main/default/objects/DetailByInquiryFactory__c/fields/NewContractProfit__c.field-meta.xml
<CustomField>
    <fullName>NewContractProfit__c</fullName>
    <formula>NewContractCP__c -  NewContractTCFormula__c</formula>
    <label>最新_利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>