force-app/main/default/objects/DetailByInquiryFactory__c/fields/NewContractTCFormula__c.field-meta.xml
<CustomField>
    <fullName>NewContractTCFormula__c</fullName>
    <formula>NewContractWC__c + (  NewContractWC__c * (VALUE(TEXT( intCommonRatio__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最新_TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>