force-app/main/default/objects/DetailByInquiryFactory__c/fields/NewContractTCRate__c.field-meta.xml
<CustomField>
    <fullName>NewContractTCRate__c</fullName>
    <formula>ROUND(NewContractTCFormula__c/NewContractCP__c,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最新_TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>