force-app/main/default/objects/DetailByInquiryFactory__c/fields/NewContractWC__c.field-meta.xml
<CustomField>
    <fullName>NewContractWC__c</fullName>
    <label>最新_WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>