force-app/main/default/objects/DetailByInquiryFactory__c/fields/NewContractWCRate__c.field-meta.xml
<CustomField>
    <fullName>NewContractWCRate__c</fullName>
    <formula>ROUND(NewContractWC__c/NewContractCP__c,3)</formula>
    <label>最新_WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>