force-app/main/default/objects/DetailByInquiryFactory__c/fields/OriginalContractCP__c.field-meta.xml
<CustomField>
    <fullName>OriginalContractCP__c</fullName>
    <label>原契約_CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>