force-app/main/default/objects/DetailByInquiryFactory__c/fields/OriginalContractGrossProfit__c.field-meta.xml
<CustomField>
    <fullName>OriginalContractGrossProfit__c</fullName>
    <formula>OriginalContractCP__c - OriginalContractWC__c</formula>
    <label>原契約_粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>