force-app/main/default/objects/DetailByInquiryFactory__c/fields/OriginalContractProfit__c.field-meta.xml
<CustomField>
    <fullName>OriginalContractProfit__c</fullName>
    <formula>OriginalContractCP__c - OriginalContractTCFormula__c</formula>
    <label>原契約_利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>