force-app/main/default/objects/DetailByInquiryFactory__c/fields/OriginalContractTCFormula__c.field-meta.xml
<CustomField>
    <fullName>OriginalContractTCFormula__c</fullName>
    <formula>OriginalContractWC__c + (  OriginalContractWC__c * (VALUE(TEXT( intCommonRatio__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>原契約_TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>