force-app/main/default/objects/DetailByInquiryFactory__c/fields/OriginalContractTCRate__c.field-meta.xml
<CustomField>
    <fullName>OriginalContractTCRate__c</fullName>
    <formula>ROUND(OriginalContractTCFormula__c/OriginalContractCP__c,3)</formula>
    <label>原契約_TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>