force-app/main/default/objects/DetailByInquiryFactory__c/fields/OriginalContractWC__c.field-meta.xml
<CustomField>
    <fullName>OriginalContractWC__c</fullName>
    <label>原契約_WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>