force-app/main/default/objects/DetailByInquiryFactory__c/fields/OriginalContractWCRate__c.field-meta.xml
<CustomField>
    <fullName>OriginalContractWCRate__c</fullName>
    <formula>ROUND(OriginalContractWC__c/OriginalContractCP__c,3)</formula>
    <label>原契約_WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>