force-app/main/default/objects/DetailByInquiryFactory__c/fields/QuoteBiddingInquiry__c.field-meta.xml
<CustomField>
    <fullName>QuoteBiddingInquiry__c</fullName>
    <label>伺い件名</label>
    <referenceTo>QuoteBiddingInquiry__c</referenceTo>
    <relationshipLabel>伺い場所別数値明細</relationshipLabel>
    <relationshipName>ZlEL</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>