force-app/main/default/objects/DetailByInquiryFactory__c/fields/TC__c.field-meta.xml
<CustomField>
    <fullName>TC__c</fullName>
    <formula>WC__c + ( WC__c * (VALUE(TEXT( intCommonRatio__c ))))</formula>
    <label>価格案TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>