force-app/main/default/objects/DetailByInquiryFactory__c/fields/TCMin__c.field-meta.xml
<CustomField>
    <fullName>TCMin__c</fullName>
    <formula>WC__c + ( WC__c * (VALUE(TEXT( intCommonRatio__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>価格案(MIN)_TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>