force-app/main/default/objects/DetailByInquiryFactory__c/fields/TCRate__c.field-meta.xml
<CustomField>
    <fullName>TCRate__c</fullName>
    <formula>TC__c /  CP__c</formula>
    <label>価格案TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>