force-app/main/default/objects/DetailByInquiryFactory__c/fields/TCRateMin__c.field-meta.xml
<CustomField>
    <fullName>TCRateMin__c</fullName>
    <formula>TCMin__c /  CPMin__c</formula>
    <label>価格案(MIN)_TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>