force-app/main/default/objects/DetailByInquiryFactory__c/fields/WC__c.field-meta.xml
<CustomField>
    <fullName>WC__c</fullName>
    <label>価格案WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>