force-app/main/default/objects/DetailByInquiryFactory__c/fields/WCMin__c.field-meta.xml
<CustomField>
    <fullName>WCMin__c</fullName>
    <label>価格案(MIN)_WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>