force-app/main/default/objects/DetailByInquiryFactory__c/fields/WCRate__c.field-meta.xml
<CustomField>
    <fullName>WCRate__c</fullName>
    <formula>WC__c /  CP__c</formula>
    <label>価格案WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>