force-app/main/default/objects/DetailByInquiryFactory__c/fields/WCRateMin__c.field-meta.xml
<CustomField>
    <fullName>WCRateMin__c</fullName>
    <formula>WC__c /  CPMin__c</formula>
    <label>価格案(MIN)_WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>