force-app/main/default/objects/DetailByInquiryFactory__c/validationRules/CPCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CPCheck</fullName>
    <active>true</active>
    <description>「辞退」/「単価見積」以外は価格案_CPは必須</description>
    <errorConditionFormula>AND(
    AND(
        QuoteBiddingInquiry__r.Refusal__c = false,
        QuoteBiddingInquiry__r.UnitPriceEstimation__c = false
    ),
    QuoteBiddingInquiry__r.Creating__c = false,
    QuoteBiddingInquiry__r.RecordType.DeveloperName != &quot;SH&quot;,
    ISBLANK(CP__c )
)</errorConditionFormula>
    <errorDisplayField>CP__c</errorDisplayField>
    <errorMessage>価格案_CPは必須です</errorMessage>
</ValidationRule>