force-app/main/default/objects/DetailByInquiryFactory__c/validationRules/ImprovementTargetWCCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ImprovementTargetWCCheck</fullName>
    <active>true</active>
    <description>「価格案(MIN)_TC」＞「価格案(MIN)_CP」の時、改善目標_WCは必須</description>
    <errorConditionFormula>AND(
    CPMin__c &lt;  TCMin__c,
    ISBLANK(ImprovementTargetWC__c)
)</errorConditionFormula>
    <errorDisplayField>ImprovementTargetWC__c</errorDisplayField>
    <errorMessage>改善目標_WCは必須です</errorMessage>
</ValidationRule>